--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.App {
-  text-align: center;
+.app {
+  background-color: #e7e7e7;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -36,3 +36,4 @@
     transform: rotate(360deg);
   }
 }
+ */
